Added get employees endpoint
