# server/src/api/controllers/employee.controller.js
@@ -4,7 +4,8 @@ var employeeService = require('../services/employee.service');
 var util = require('util');
 
 module.exports = {
-  addEmployee: addEmployee
+  addEmployee: addEmployee,
+  getEmployees: getEmployees,
 };
 
 function addEmployee(req, res) {
@@ -12,3 +13,9 @@ function addEmployee(req, res) {
   employeeService.addUser(employee);
   res.json(employee);
 }
+
+function getEmployees(req, res) {
+  employeeService.getEmployees().then((employees) => {
+    res.json(employees);
+  })
+};
